// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WhoToFollow - Snapshots > matches snapshot when loading 1`] = `
<div>
  <div
    class="mt-6 gap-4 lg:mt-0"
    data-testid="container"
  >
    <div
      class="gap-3.5 rounded-md bg-transparent p-0 lg:gap-3 lg:bg-card lg:p-6"
      data-testid="container"
    >
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton item
      </div>
    </div>
  </div>
</div>
`;

exports[`WhoToFollow - Snapshots > matches snapshot with no users 1`] = `
<div>
  <div
    class="relative mt-6 items-center gap-6 px-0 py-6 lg:mt-0"
    data-testid="who-to-follow-empty"
  >
    <div
      class="flex items-center rounded-full bg-brand/16 p-6"
      data-testid="container"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-users size-12 text-brand"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
        />
        <path
          d="M16 3.128a4 4 0 0 1 0 7.744"
        />
        <path
          d="M22 21v-2a4 4 0 0 0-3-3.87"
        />
        <circle
          cx="9"
          cy="7"
          r="4"
        />
      </svg>
    </div>
    <div
      class="items-center gap-6"
      data-testid="container"
    >
      <h3>
        No recommendations yet
      </h3>
      <p>
        We're still learning about your interests.
        <br />
        Follow some users or explore tags to get personalized recommendations.
      </p>
    </div>
  </div>
</div>
`;

exports[`WhoToFollow - Snapshots > matches snapshot with users 1`] = `
<div>
  <div
    class="mt-6 gap-4 lg:mt-0"
    data-testid="container"
  >
    <div
      class="gap-3.5 rounded-md bg-transparent p-0 lg:gap-3 lg:bg-card lg:p-6"
      data-testid="container"
    >
      <button
        data-follow-button-variant="icon"
        data-testid="user-list-item"
        data-user-id="user-1"
        type="button"
      >
        User item
      </button>
      <button
        data-follow-button-variant="icon"
        data-testid="user-list-item"
        data-user-id="user-2"
        type="button"
      >
        User item
      </button>
    </div>
    <div
      class="h-1"
      data-testid="container"
    />
  </div>
</div>
`;
